Basic Random Color and Color Wheel Tabs set up

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Color Assistant</title>
   </head>
+  <header>
+    <h1>Web Color Assistant</h1>
+  </header>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
